--- a/templates/backstage/ai-agents/strands/catalog-info.yaml
+++ b/templates/backstage/ai-agents/strands/catalog-info.yaml
@@ -4,6 +4,8 @@ kind: Component
 metadata:
   name: ${{values.name | dump}}
   description: This is Agent Deploymnt
+  tags:
+    - ${{values.agentSDK}}
   annotations:
     backstage.io/kubernetes-label-selector: 'entity-id=${{values.name}}'
     argocd/app-selector: 'entity-id=${{values.name}}'
@@ -14,7 +16,10 @@ metadata:
     backstage.io/techdocs-ref: dir:.
   links:
     - url: https://${{values.repoHost}}/cnoe-idp-demo/${{values.name}}
-      title: App Repo URL
+      title: Agent Repo 
+      icon: github
+    - url: https://${{values.repoHost}}/cnoe-idp-demo/${{values.name}}-deploy
+      title: Agent Deploy Repo
       icon: github
 spec:
   owner: guests
@@ -26,11 +31,11 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: ${{values.name | dump}}
-  description: An example system for demonstration purposes
+  name: ${{values.agentRuntime | dump}}
+  description: An example system for demonstration purpose
   links:
     - url: https://${{values.repoHost}}/cnoe-idp-demo/${{values.name}}
-      title: App Repo URL
+      title: App Repo
       icon: github
 spec:
   owner: guests
